public/css/kanku/mystyle.css
.kanku_alert {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
}


.top_pager {
  margin-top: 10px;
  margin-bottom: 10px;
}
#content {
  padding-top: 60px;
}
#searchclear {
    position: absolute;
    right: 20px;
    top: 0;
    bottom: 0;
    height: 14px;
    margin: auto;
    font-size: 14px;
    cursor: pointer;
    color: #ccc;
}

#job_history {
    margin-top:10px;
}
.result_toggler {
    cursor: pointer;
}

.state-row, .event-row {
  margin-top: 20px;
  margin-bottom: 20px;
  text-align: center;
}

.notify-cb {
  text-align: center;
}

.notify-hdr {
  font-weight: bold;
}

.result-row {
  margin-top: 20px;
  margin-bottom: 20px;
  text-align: center;
}

.event-card {
  padding-bottom: 10px;
  margin-bottom: 5px;
  border-bottom: 1px solid grey;
}

.request-div {
  margin-bottom: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
  border-top: 1px solid grey;
}

/* VUE.js */
.fade-enter-active, .fade-leave-active {
  transition: opacity .5s;
}

.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
  opacity: 0;
}

pre {
    display: block;
    padding: 9.5px;
    margin: 0 0 10px;
    font-size: 13px;
    line-height: 1.42857143;
    color: #333;
    word-break: break-all;
    word-wrap: break-word;
    background-color: #f5f5f5;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.task_result_card {
  margin-bottom: 5px;
}

.job_header, .worker_info, .role_request_header {
    /* border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0; */
    position: relative;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #e2e3e5;
    background-clip: border-box;
    border: 1px solid rgba(0,0,0,.125);
    border-radius: .25rem;
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
}

.guest-card {
    margin-bottom: 1rem;
}

.job_card {
  margin-bottom: 5px;
}

.task_card {
  margin-bottom: 5px;
}

